Fixed broken styles

--- a/src/public/assets/_partials/common.less
+++ b/src/public/assets/_partials/common.less
@@ -26,7 +26,7 @@ html {
 
 img, object, embed {
   max-width: 100%;
-  height: auto;
+  height: auto !important;
 }
 
 a {
