--- a/src/public/assets/_partials/elements/main.less
+++ b/src/public/assets/_partials/elements/main.less
@@ -83,3 +83,10 @@ blockquote {
     position: absolute;
   }
 }
+
+figure {
+  &.top,
+  &.bottom {
+    z-index: -1;
+  }
+}
