--- a/src/public/assets/_partials/grid.less
+++ b/src/public/assets/_partials/grid.less
@@ -7,7 +7,6 @@
 .left {
   &.top {
     position: absolute;
-    z-index: -1;
     left: 0;
     top: 0;
   }
@@ -25,7 +24,6 @@
   &.bottom, &.top {
     position: absolute;
     overflow: visible;
-    z-index: -1;
   }
 
   &.bottom {
